--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,74 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
+  /* background-image: url("https://images.pexels.com/photos/776635/pexels-photo-776635.jpeg?auto=compress&cs=tinysrgb&w=400"); */
+  background-color: azure;
+  
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.btn-container{
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20rem;
 }
+.btn{
+  padding: 5px;
+  background-color:aliceblue;
+  border-radius: 10px;
+  font-size: 1.5rem;
+  cursor: pointer;
+  border-color: aqua;
+  font-weight: 500;
+  
+
+}
+.left{
+  display: flex;
+  padding: 10px;
+  margin-left:70px;
+  height: 50px;
+  width: 200px;
+  background-color: aliceblue;
+  border-radius:20px;
+  margin-top: -50px;
+  
+  
+} 
+ .right{
+  display: flex;
+  padding: 10px;
+  margin-left:480px;
+  height: 50px;
+  width: 200px;
+  background:aliceblue;
+  border-radius:20px;
+  margin-top: -50px;
+  } 
+   .top{
+    display: flex;
+    padding: 10px;
+    margin-left:275px;
+    
+    height: 50px;
+    width: 200px;
+    background:aliceblue;
+    border-radius:20px;
+    margin-top: -120px;
+    }
+    .bottom{
+      display: flex;
+      padding: 10px;
+      margin-left:275px;
+      
+      height: 50px;
+      width: 200px;
+      background: aliceblue;
+      border-radius:20px;
+      margin-top: 5px;
+      }
+
+
+
