--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -11,8 +12,9 @@ body {
   
 }
 
+
 .btn-container{
-  display: flex;
+  display: block;
   text-align: center;
   justify-content: center;
   align-items: center;
@@ -65,7 +67,7 @@ body {
     .bottom{
       display: flex;
       padding: 10px;
-      margin-left:275px;
+      
       
       height: 50px;
       width: 200px;
@@ -73,6 +75,10 @@ body {
       border-radius:20px;
       margin-top: 5px;
       }
+      @media only screen and (min-width: 320px)  { .top{margin-left:200px;} ;.right{margin-left:10px; font-size: 12px;} .bottom{margin-left: 200px;} .left{margin-left: 0px;}}
+@media only screen and (min-width: 768px)  { .top{margin-left:400px;} .right{margin-left: 600px;} .bottom{margin-left: 400px; }.left{margin-left: 150px;}} 
+@media only screen and (min-width: 1024px) {.top{margin-left:700px;} .right{margin-left: 900px;} .bottom{margin-left: 700px;} .left{margin-left: 400px;}}
+@media only screen and (min-width: 1900px) { .top{margin-left:800px;} ;.right{margin-left: 100px;} }
 
 
 
